# gtddp_drone

./: CMakeLists.txt  README.md  package.xml
include/gtddp_drone/: control_calc.h  flight_controller.h  pursuit_control.h  state_estimate.h  traj_optimizer.h
launch/: cart_pole_sim.launch  cart_pole_traj_gen.launch  ccddp_traj_gen.launch  constants.launch  double_ccddp_traj_gen.launch  drone_real.launch  drone_sim.launch  drone_traj_gen.launch  gtddp_drone.launch  gtddp_traj_gen.launch  pursuit.launch  pursuit_constants.launch  pursuit_real.launch  pursuit_sim.launch  pursuit_traj_gen.launch  real_gtddp_drone.launch  traj_gen.launch
launch/constants/: cart_pole_cc_params.yaml  cart_pole_gen_params.yaml  cart_pole_sim_constants.yaml  ccddp_traj_params.yaml  double_ccddp_traj_params.yaml  drone_real_params.yaml  drone_sim_params.yaml  gtddp_traj_params.yaml  pursuit_cc_params.yaml  pursuit_constants.launch  pursuit_constants_cc.launch  pursuit_constants_sim.launch  pursuit_gen_params.yaml  pursuit_real_params.yaml  pursuit_sim_constants.yaml
src/: cart_control_node.cpp  cart_optimize_node.cpp  cart_pole_runner.py  control_calc.cpp  control_calc.h  debug_code.txt  flight_controller.cpp  gtddp_control_node.cpp  gtddp_optimize_node.cpp  gtddp_state_estimate.cpp  gtddp_target_node.cpp  gtddp_traj_optimize.cpp  keyboard_node.py  pursuit_control.cpp  pursuit_control_node.cpp  pursuit_keyboard_node.py  state_estimate.cpp  traj_optimizer.cpp  traj_optimizer.h
src/gtddp_lib/: CC_DDP_optimizer.cpp  Cart_Pole.cpp  Constants.cpp  Cost_Function.cpp  DDP_Optimizer.cpp  main_mm.cpp  (+5 more)
(+30 files in other folders)
